# gen_ea_rl

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
src/gen_ea_rl/: detokenizer.py  gen_ea_rl.py  generate_steps.py  steps_to_urdf.py  task_to_plan.py  test_urdf_modifier_gemma_via_unsloth.py  test_urdf_modifier_gemma_via_vllm.py  train_urdf_modifier.py  train_urdf_modifier_gemma.py  train_urdf_modifier_gpt_oss_20b.py  urdf_to_steps.py  urdf_to_tasks.py  urdf_to_urdf.py  urdfs_and_task_to_analysis.py
src/gen_ea_rl/helpers/: helpers.py  parameter_helpers.py  randomizer_helpers.py  robot_model.py  training_helpers.py  urdf_helpers.py
src/gen_ea_rl/models/: deep_seek_r1_qwen_7b.py  gpt_oss_20b.py  gpt_oss_20b_unsloth.py  gpt_oss_20b_vllm.py  vllm.py
src/gen_ea_rl/tools/: clean_urdf.py  clean_urdf_with_metadata.py  urdf_randomizer.py  urdf_to_xacro.py
