[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gen_ea_rl"
version = "0.0.1"
license = { file = "LICENSE" }
authors = [
    { name = "Valentin Yuryev", email = "valentin.yuryev@gmail.com" },
]
maintainers = [
    { name = "Valentin Yuryev", email = "valentin.yuryev@gmail.com" }
]
description = "Generative Design using Evolutionary Algorithms and Reinforcement Learning."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 3 - Alpha",
    # Indicate who your project is intended for
    "Intended Audience :: Education",
    # Pick your license as you wish (see also "license" above)
    "License :: OSI Approved :: MIT License",
    # Specify the Python versions you support here.
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "yourdfpy",
    "beautifulsoup4",
    "instructor",
]